--- a/README
+++ b/README
@@ -9,6 +9,11 @@ Proyecto 2 - Dieter de Wit
   - Dirigirse a la carpeta del proyecto /OpenGL_Mesa/proyecto2 y probar cualquiera de los dos ejecutables
     ./proyecto2
     ./proyecto2_assimp
+  - Mover vista de la camara con Mouse
+  - Mover lado a lado o produndidad con las flechas
     
 2. Para correr el WebGL
   - Abrir el .html con Firefox (Ya viene configurado para WebGl) o algun navegador que tenga WebGL habilitado.
+  - Mover vista de la camara con Mouse
+  - Mover Profundidad con rueda
+  - Mover lado a lado con click
